tests/miz/pass/types/pass_type_elaboration_local_object_mode_reserved_variable_equality_001.miz
definition
  mode LocalObjectModeDef: LocalObjectMode is object;
end;

reserve x for LocalObjectMode;
theorem LocalObjectModeReservedVariableEqualityPayloadBoundary: x = x;
