tests/miz/fail/types/fail_types_element_of_non_set_001.miz
definition
  mode Truth is bool;
end;

definition
  let x be Element of Truth;
  theorem
    x = x;
  proof
  end;
end;
